--- a/hu_vsphere_6.adoc
+++ b/hu_vsphere_6.adoc
@@ -263,6 +263,6 @@ during storage failover testing on all the 7-mode, C-cmode cluster controllers.
 
 == Related Links
 
-* To access TR-4597-VMware vSphere with ONTAP, go to link:https://cert.vmware.com/caas/support/case/00088028[Customer case-00088028] and link:https://cert.vmware.com/caas/support/case/00088029[Customer case-00088029]
+* To access TR-4597-VMware vSphere with ONTAP, refer link:https://cert.vmware.com/caas/support/case/00088028[Customer case-00088028] and link:https://cert.vmware.com/caas/support/case/00088029[Customer case-00088029]
 * link:https://kb.vmware.com/s/article/2031038[VMware vSphere 5.x, 6.x and 7.x support with NetApp MetroCluster (2031038)]
 * link:https://kb.vmware.com/s/article/83370[NetApp ONTAP with NetApp SnapMirror Business Continuity (SM-BC) with VMware vSphere Metro Storage Cluster (vMSC)]
