--- a/nvme_sles15_sp3.adoc
+++ b/nvme_sles15_sp3.adoc
@@ -16,13 +16,13 @@ summary: Describes how to configure NVMe/FC for SUSE Linux Enterprise Server 15 
 
 == Supportability
 
-NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with SUSE Linux Enterprise Server 15 SP3 (SLES15 SP3) with ANA (Asymmetric Namespace Access) required for surviving storage failures (SFOs) on the NetApp array. ANA is the ALUA equivalent in NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. The details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on SLES15 SP3 and ONTAP as the target has been documented here.
+NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with SUSE Linux Enterprise Server 15 SP3 (SLES15 SP3) with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. The details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on SLES15 SP3 and ONTAP as the target has been documented here.
 
 == Features
 
 *	SLES15 SP3 supports NVMe/FC and other transports.
 *	There is no sanlun support for NVMe-oF. Therefore, there is no LUHU support for NVMe-oF on SLES15 SP3. You can rely on the NetApp plug-in included in the native nvme-cli for the same instead. This should work for all NVMe-oF transports.
-*	Both NVMe and SCSI traffic can be run on the same co-existent host. In fact, that is expected to be the commonly deployed host config for customers. Therefore, for SCSI, you may configure `dm-multipath` as usual for SCSI LUNs resulting in mpath devices, whereas NVMe multipath might be used to configure NVMe-oF multipath devices (such as, `/dev/nvmeXnY`) on the host.
+*	Both NVMe and SCSI traffic can be run on the same co-existent host. In fact, that is expected to be the commonly deployed host config for customers. Therefore, for SCSI, you may configure `dm-multipath` as usual for SCSI LUNs resulting in mpath devices, whereas NVMe multipath might be used to configure NVMe-oF multipath devices on the host.
 
 ==	Known limitations
 
@@ -37,38 +37,19 @@ Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability M
 
 In-kernel NVMe multipath is already enabled by default on SLES hosts such as SLES15 SP3. Therefore, no additional setting is required here. Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix] for accurate details regarding supported configurations.
 
-== Updating NVMe-oF initiator packages
+== NVMe-oF initiator packages
 
-.	Install the `SLES15 SP3 MU kernel-default-5.3.18-59.5.2` separately to avail the latest kernel fixes:
-+
-----
-# rpm -ivh kernel-default-5.3.18-59.5.2.x86_64.rpm kernel-default-devel-5.3.18-59.5.2.x86_64.rpm kernel-devel-5.3.18-59.5.2.noarch.rpm kernel-macros-5.3.18-59.5.2.noarch.rpm  kernel-source-5.3.18-59.5.2.noarch.rpm
-----
-+
+Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix] for accurate details regarding supported configurations.
 
-* If the above `rpm -ivh` command fails with the message that a newer package is already installed, then proceed to install this using the `--oldpackage` option, such as:
+. Verify that you have the requisite kernel & nvme-cli MU packages installed on the SLES15 SP3 MU host.
++
+Example:
 +
 ----
- # rpm -ivh kernel-default-5.3.18-59.5.2.x86_64.rpm kernel-default-devel-5.3.18-59.5.2.x86_64.rpm kernel-devel-5.3.18-59.5.2.noarch.rpm  kernel-macros-5.3.18-59.5.2.noarch.rpm  kernel-source-5.3.18-59.5.2.noarch.rpm --oldpackage
-----
-* To make the above kernel the default entry in the grub bootloader, run the following commands:
-**	`# grub2-set-default 'Advanced options for SLES 15-SP3>SLES 15-SP3, with Linux 5.3.18-59.5-default`
-**	`# grub2-mkconfig -o /boot/grub2/grub.cfg`
-+
-Now the host would pick the above kernel as the default grub entry during reboot.
 
-
-.	Reboot the host and ensure it boots into the above SLES15 SP3 MU kernel:
-+
-----
 # uname -r
 5.3.18-59.5-default
-----
-+
 
-.	Next, upgrade to nvme-cli-1.13-3.3.1 by running  `rpm -Uvh` command on this package:
-+
-----
 # rpm -qa|grep nvme-cli
 nvme-cli-1.13-3.3.1.x86_64
 ----
@@ -76,22 +57,24 @@ nvme-cli-1.13-3.3.1.x86_64
 
 The above nvme-cli MU package now includes the following:
 
-*	*NVMe/FC auto-connect scripts* - Included natively in the nvme-cli now, therefore, you no longer need to install the Broadcom/QLogic auto-connects separately on the SLES15 SP3 host:
+*	*NVMe/FC auto-connect scripts* - Required for NVMe/FC auto-(re)connect when underlying paths to the namespaces are restored as well as during the host reboot:
 +
+[subs=+quotes]
 ----
 # rpm -ql nvme-cli-1.13-3.3.1.x86_64
 /etc/nvme
 /etc/nvme/hostid
 /etc/nvme/hostnqn
-/usr/lib/systemd/system/nvmefc-boot-connections.service
+*/usr/lib/systemd/system/nvmefc-boot-connections.service
 /usr/lib/systemd/system/nvmefc-connect.target
-/usr/lib/systemd/system/nvmefc-connect@.service
+/usr/lib/systemd/system/nvmefc-connect@.service*
 ...
 ----
 +
 
 *	*ONTAP udev rule* - New udev rule to ensure NVMe multipath round-robin loadbalancer default applies to all ONTAP namespaces:
 +
+[subs=+quotes]
 ----
 # rpm -ql nvme-cli-1.13-3.3.1.x86_64
 /etc/nvme
@@ -102,7 +85,7 @@ The above nvme-cli MU package now includes the following:
 /usr/lib/systemd/system/nvmf-connect.target
 /usr/lib/systemd/system/nvmf-connect@.service
 /usr/lib/udev/rules.d/70-nvmf-autoconnect.rules
-/usr/lib/udev/rules.d/71-nvmf-iopolicy-netapp.rules
+*/usr/lib/udev/rules.d/71-nvmf-iopolicy-netapp.rules*
 ...
 # cat /usr/lib/udev/rules.d/71-nvmf-iopolicy-netapp.rules
 # Enable round-robin for NetApp ONTAP and NetApp E-Series
@@ -171,15 +154,16 @@ Online
 Online
 ----
 +
-.	Verify that the FC-NVMe initiator ports are enabled and you are able to see the target ports, and all are up and running. In this example, only 1 initiator port is enabled and connected with two target LIFs as seen in the output:
+.	Verify that the NVMe/FC initiator ports are enabled and you are able to see the target ports, and all are up and running. In this example, only 1 initiator port is enabled and connected with two target LIFs as seen in the output:
 +
+[subs=+quotes]
 ----
 # cat /sys/class/scsi_host/host*/nvme_info
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc0 WWPN x100000109b579d5e WWNN x200000109b579d5e DID x011c00 ONLINE
+*NVME LPORT lpfc0 WWPN x100000109b579d5e WWNN x200000109b579d5e DID x011c00 ONLINE
 NVME RPORT WWPN x208400a098dfdd91 WWNN x208100a098dfdd91 DID x011503 TARGET DISCSRVC ONLINE
-NVME RPORT WWPN x208500a098dfdd91 WWNN x208100a098dfdd91 DID x010003 TARGET DISCSRVC ONLINE
+NVME RPORT WWPN x208500a098dfdd91 WWNN x208100a098dfdd91 DID x010003 TARGET DISCSRVC ONLINE*
 NVME Statistics
 LS: Xmt 0000000e49 Cmpl 0000000e49 Abort 00000000
 LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
@@ -188,9 +172,9 @@ abort 00000bd2 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err
 FCP CMPL: xb 000014f4 Err 00012abd
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc1 WWPN x100000109b579d5f WWNN x200000109b579d5f DID x011b00 ONLINE
+*NVME LPORT lpfc1 WWPN x100000109b579d5f WWNN x200000109b579d5f DID x011b00 ONLINE
 NVME RPORT WWPN x208300a098dfdd91 WWNN x208100a098dfdd91 DID x010c03 TARGET DISCSRVC ONLINE
-NVME RPORT WWPN x208200a098dfdd91 WWNN x208100a098dfdd91 DID x012a03 TARGET DISCSRVC ONLINE
+NVME RPORT WWPN x208200a098dfdd91 WWNN x208100a098dfdd91 DID x012a03 TARGET DISCSRVC ONLINE*
 NVME Statistics
 LS: Xmt 0000000e50 Cmpl 0000000e50 Abort 00000000
 LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
@@ -226,7 +210,7 @@ Now the Broadcom FC-NVMe host should be able to send up 1MB I/O requests on the 
 
 The native inbox qla2xxx driver included in the newer SLES15 SP3 MU kernel has the latest upstream fixes, essential for ONTAP support.
 
-. Verify that you are running the supported adapter driver and firmware versions:
+* Verify that you are running the supported adapter driver and firmware versions, for example:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
@@ -234,19 +218,13 @@ QLE2742 FW:v9.06.02 DVR:v10.02.00.106-k
 QLE2742 FW:v9.06.02 DVR:v10.02.00.106-k
 ----
 
-. Verify `ql2xnvmeenable` is set which enables the Marvell adapter to function as a NVMe/FC initiator:
+* Verify `ql2xnvmeenable` is set which enables the Marvell adapter to function as a NVMe/FC initiator:
 +
 
 `# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 1`
 
-. Ensure you are running the recommended qla2xxx driver and adapter firmware versions:
-+
-----
-# cat /sys/class/fc_host/host*/symbolic_name
-QLE2742 FW:v9.06.02 DVR:v10.02.00.106-k
-QLE2742 FW:v9.06.02 DVR:v10.02.00.106-k
-----
+
 
 
 == Validating NVMe-oF
@@ -287,14 +265,15 @@ Usage                   Format FW   Rev
 
 .	Verify the status of the ANA paths. For example,
 +
+[subs=+quotes]
 ----
 # nvme list-subsys /dev/nvme1n1
 nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.04ba0732530911ea8e8300a098dfdd91:subsystem.nvme_145_1
 \
-+- nvme2 fc traddr=nn-0x208100a098dfdd91:pn-0x208200a098dfdd91 host_traddr=nn-0x200000109b579d5f:pn-0x100000109b579d5f live inaccessible
-+- nvme3 fc traddr=nn-0x208100a098dfdd91:pn-0x208500a098dfdd91 host_traddr=nn-0x200000109b579d5e:pn-0x100000109b579d5e live inaccessible
-+- nvme4 fc traddr=nn-0x208100a098dfdd91:pn-0x208400a098dfdd91 host_traddr=nn-0x200000109b579d5e:pn-0x100000109b579d5e live optimized
-+- nvme6 fc traddr=nn-0x208100a098dfdd91:pn-0x208300a098dfdd91 host_traddr=nn-0x200000109b579d5f:pn-0x100000109b579d5f live optimized
++- nvme2 fc traddr=nn-0x208100a098dfdd91:pn-0x208200a098dfdd91 host_traddr=nn-0x200000109b579d5f:pn-0x100000109b579d5f live *inaccessible*
++- nvme3 fc traddr=nn-0x208100a098dfdd91:pn-0x208500a098dfdd91 host_traddr=nn-0x200000109b579d5e:pn-0x100000109b579d5e live *inaccessible*
++- nvme4 fc traddr=nn-0x208100a098dfdd91:pn-0x208400a098dfdd91 host_traddr=nn-0x200000109b579d5e:pn-0x100000109b579d5e live *optimized*
++- nvme6 fc traddr=nn-0x208100a098dfdd91:pn-0x208300a098dfdd91 host_traddr=nn-0x200000109b579d5f:pn-0x100000109b579d5f live *optimized*
 ----
 
 .	Verify the NetApp plug-in for the ONTAP namespace. For example,
