--- a/nvme_sles15_sp3.adoc
+++ b/nvme_sles15_sp3.adoc
@@ -190,7 +190,7 @@ FCP CMPL: xb 0000159d Err 000135c3
 
 ==== Enabling 1MB I/O Size (Optional)
 
-ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data which means the maximum I/O request size should be upto 1 MB. However, to issue I/O requests of size 1 MB for the Broadcom NVMe/FC host, the lpfc parameter `lpfc_sg_seg_cnt` should also be bumped up to 256 from the default value of 64. Use the following instructions to do so:
+ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data which means the maximum I/O request size should be up to 1 MB. However, to issue I/O requests of size 1 MB for the Broadcom NVMe/FC host, the lpfc parameter `lpfc_sg_seg_cnt` should also be bumped up to 256 from the default value of 64. Use the following instructions to do so:
 
 . Append the value 256 in the respective `modprobe lpfc.conf` file:
 +
@@ -345,7 +345,7 @@ The errors displayed by `nvme-cli` during nvme discover, nvme connect or nvme co
 |`Failed to write to /dev/nvme-fabrics: No such file or directory`  |Multiple issues could trigger this.
 Passing wrong arguments to the nvme commands is one of the common causes.
 a| * Ensure you have passed the correct arguments (such as, correct WWNN string, WWPN string, and more) to the commands.
-* If the arguments are correct, but you still see this error, check if the `/sys/class/scsi_host/host*/nvme_info` output is proper, the NVMe intiator showing as `Enabled`, and the NVMe/FC target LIFs properly showing up here under the remote ports sections.
+* If the arguments are correct, but you still see this error, check if the `/sys/class/scsi_host/host*/nvme_info` output is proper, the NVMe initiator showing as `Enabled`, and the NVMe/FC target LIFs properly showing up here under the remote ports sections.
 Example:
 +
 ----
